add libraries and modified raytracer

--- a/libraries/vector3/Makefile
+++ b/libraries/vector3/Makefile
@@ -1,6 +1,7 @@
 INC = -I ./includes/
 
-V_SRC = new_vector3.c add_vector3.c sub_vector3.c scale_vector3.c dot_vector3.c
+V_SRC = new_vector3.c add_vector3.c sub_vector3.c scale_vector3.c dot_vector3.c \
+		magnitude_vector3.c init_vector3.c normalize_vector3.c print_vector3.c
 
 V_DIR = ./src/
 
@@ -23,7 +24,8 @@ TEST_SRC_DIR = $(TEST_DIR)src/
 TEST_INC = -I $(TEST_DIR)includes
 
 TEST_SRC = test_main.c test_new_vector3.c test_sub_vector3.c test_add_vector3.c \
-			test_scale_vector3.c test_dot_vector3.c
+			test_scale_vector3.c test_dot_vector3.c test_magnitude_vector3.c \
+			test_init_vector3.c test_normalize_vector3.c
 
 TEST_OBJ = $(addprefix $(OBJ_DIR), $(TEST_SRC:.c=.o))
 
@@ -45,12 +47,12 @@ obj:
 	@mkdir -p $(OBJ_DIR)
 
 $(NAME): $(V_OBJ)
-	ar rc $@ $^
+	@ar rc $@ $^
 	@ranlib $@
 	@echo "$(COM_COLOR)$(COM_STRING)$(NO_COLOR)"
 
 $(OBJ_DIR)%.o: $(V_DIR)%.c
-	gcc $(FLAGS) $(INC) -c $< -o $@
+	@gcc $(FLAGS) $(INC) -c $< -o $@
 
 clean:
 	@/bin/rm -rf $(OBJ_DIR)
@@ -62,7 +64,7 @@ fclean: clean
 	@echo "$(COM_COLOR)$(CLEAN_NAME)$(NO_COLOR)"
 
 test: all $(TEST_OBJ)
-	@gcc $(FLAGS) $(TEST_OBJ) libvector3.a -o $(TEST_NAME)
+	@gcc $(FLAGS) $(TEST_OBJ) libvector3.a -lm -o $(TEST_NAME)
 	./$(TEST_NAME)
 
 $(OBJ_DIR)%.o: $(TEST_SRC_DIR)%.c
